[Password Manager] Change the padding row between username and password in a prompt

The CL re-uses the constant from bookmarks UI (https://cs.chromium.org/chromium/src/chrome/browser/ui/views/harmony/textfield_layout.cc?rcl=11600e912d8a6eee9dca47af9e4bc6ff43dbbda7 [formerly 4de610bbd16d98f5e1496eb68e96402214d0a0ec]&l=86)

Bug: 772893
Change-Id: Iae4969df9a5d022d98699e72645a09ad2653229b
Reviewed-on: https://chromium-review.googlesource.com/725283
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509736}
Former-commit-id: 08d45cd1b978ffaa3b5a935876f7594312c7d372